--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
     "framer-motion": "^12.5.0",
     "lenis": "^1.2.3",
     "lucide-react": "^0.482.0",
-    "motion": "^12.5.0",
+    "motion": "^12.6.3",
     "next": "15.2.2",
+    "next-themes": "^0.4.6",
     "nodemailer": "^6.10.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
